<resources>
    <string name="app_name">Karbantartás kezelő</string>
    <string name="workerName">Munkavállaló neve</string>
    <string name="navigation_drawer_open">Navigációs fül kinyitása</string>
    <string name="navigation_drawer_close">Navigációs fül bezárása</string>
    <string name="LoginTv">Belépés</string>
    <string name="UsernameTv">Felhasználónév</string>
    <string name="PasswordTv">Jelszó</string>
    <string name="SendBtn">Küldés</string>
    <string name="CheckTools">Eszközök megtekintése</string>
    <string name="Message">Üzenet</string>
    <string name="AddTools">Eszközök hozzáadása</string>
    <string name="Share">Megosztás</string>
    <string name="Send">Küldés</string>
    <string name="Communicate">Kommunikáció</string>
    <string name="Position">Pozíció</string>
    <string name="Date_of_birth">Születési idő</string>

    <string name="Add_user">Felhasználó hozzáadása</string>
    <string name="Manage_accounts">Felhasználók</string>
    <string name="Manage_professions">Képzettségek</string>
    <string name="First_name">Keresztnév</string>
    <string name="Last_name">Vezetéknév</string>
    <string name="Logout">Kilépés</string>
    <string name="databaseUpdated">Adatbázis frissült</string>
    <string name="databaseUpdated2">Adatbázis sikeresen frissült!</string>
    <string name="databaseError">Hiba!</string>
    <string name="errorTask">A feladat már: </string>
    <!--Fragment manage users -->
    <string name="users">Felhasználók</string>
    <string name="manage_users">Karbantartók kezelése</string>
    <string name="addProfession">Végzettség hozzáadása</string>
    <string name="requiredProfession">Szükséges végzettség:</string>
    <string name="professions">Végzettségek</string>
    <string name="New_employee">Új munkavállaló</string>
    <string name="Employee_id">Munkavállaló:</string>
    <string name="Profile">Profil</string>
    <string name="AddCategory">Kategória hozzáadása</string>
    <string name="AddSubcategory">Alkategória hozzáadása</string>
    <string name="AddTask">Feladat hozzáadása</string>
    <string name="Open">Megnyit</string>
    <string name="Close">Bezár</string>
    <string name="Tool_name">Eszköz neve:</string>
    <string name="Category_name">Kategória neve:</string>
    <string name="Subcategory_name">Alkategória neve:</string>
    <string name="Tool_id">Eszköz:</string>
    <string name="Category_id">Kategória:</string>
    <string name="Subcategory_id">Alkategória:</string>
    <string name="Tool_category">Eszköz kategória:</string>
    <string name="Profession">Képesítés:</string>
    <string name="Repair_time">Norma idő (óra):</string>
    <string name="Instructions">Utasítás:</string>
    <string name="Description">Leírás:</string>
    <string name="Location">Elhelyezkedés:</string>
    <string name="Cause">Hiba oka:</string>
    <string name="Date">Időpont:</string>
    <string name="toolManager">eszkozfelelos</string>
    <string name="maintenanceInterval">Javítás intervalluma (nap)</string>
    <string name="tasks">Feladatok</string>
    <string name="role">Szerep</string>
    <string name="maintainer">karbantarto</string>
    <string name="manageTask">Feladat kiosztása</string>
    <string name="showTask">Kiválasztott feladat</string>
    <string name="overview">Áttekintés</string>
    <string name="addtask">Feladat hozzáadása</string>
    <string name="handlingTask">Feladatok kezelése</string>
    <string name="unallocatedTasks">Kiosztatlan feladatok</string>
    <string name="severity">Súlyosság:</string>
    <string name="state">Állapot:</string>
    <string name="getTime">Kiosztás ideje:</string>
    <string name="deny_cause">Elutasítás oka:</string>
    <string name="no_deny">Még nem volt elutasítva</string>
    <string name="no_location">Még nem fogadta el a feladatot</string>



</resources>