<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_addcat"
            android:icon="@drawable/ic_message"
            android:title="@string/AddCategory" />
        <item
            android:id="@+id/nav_addsubcat"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/AddSubcategory" />
        <item
            android:id="@+id/nav_addtools"
            android:icon="@drawable/ic_search_tools"
            android:title="@string/AddTools" />
    </group>
    <item android:title="@string/Profile">
        <menu>
            <item
                android:id="@+id/nav_logout_toolman"
                android:icon="@drawable/ic_share"
                android:title="@string/Logout" />
        </menu>
    </item>
</menu>