<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_baseline_preview_24"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_manage_tasks"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/handlingTask" />

    </group>
    <item android:title="@string/Profile">
        <menu>
            <item
                android:id="@+id/nav_logout_operator"
                android:icon="@drawable/ic_share"
                android:title="@string/Logout" />
        </menu>
    </item>
</menu>