<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".addToolFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/AddTools"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tool_name" />

    <EditText
        android:id="@+id/subCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tool_category" />

    <EditText
        android:id="@+id/toolCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Description" />

    <EditText
        android:id="@+id/repairInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Location" />

    <EditText
        android:id="@+id/repairTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addTool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddTools" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp" />

    <Button
        android:id="@+id/addCategory1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddCategory" />

    <Button
        android:id="@+id/addSubcategory1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AddSubcategory" />

</LinearLayout>