<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   tools:showIn="navigation_view"
    android:id="@+id/admin_menu"
    >
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_addsubcat"
            android:icon="@drawable/ic_baseline_manage_accounts_24"
            android:title="@string/Manage_accounts" />
        <item
            android:id="@+id/nav_manage_professions"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/Manage_professions" />
    </group>
    <item android:title="Profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/Logout" />
        </menu>
    </item>
</menu>