<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".manageTasksFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/manageTask"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/toolTv"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Tool_id" />

    <EditText
        android:id="@+id/toolID"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/profTv"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requiredProfession" />

    <EditText
        android:id="@+id/reqProf"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvEmployee"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Employee_id" />

    <EditText
        android:id="@+id/employeeId"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/manageTask"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manageTask" />

</LinearLayout>